# girlscout

./: .dockerignore  Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
src/: main.rs  misc.rs  monitor.rs  rcon.rs
