[package]
name = "girlscout"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
env_logger = "0.11"
futures = "0.3"
itertools = "0.12"
log = "0.4"
notify-debouncer-mini = "0.4"
poise = "0.6"
serde = { version = "1.0", features = ["rc"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
zerocopy = { version = "0.7", features = ["derive"] }
